--- a/reper_front/app/src/main/res/values/strings.xml
+++ b/reper_front/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Reper</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="announcement_text"><u>공지 더 보러가기</u></string>
+    <string name="recipe_text"><u>레시피 더 보러가기</u></string>
 </resources>
